--- a/core/templates/includes/latest-products.html
+++ b/core/templates/includes/latest-products.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load shop_tags %}
-
+{% load humanize %}
 <!-- Card Grid -->
 <div class="container content-space-2 content-space-lg-3">
     <!-- Title -->
@@ -44,14 +44,16 @@
                     </h4>
                     {% if latest_product.is_discounted %}
                     <p class="card-text text-dark fs-4">
-                        <span class="formatted-price">{{ latest_product.get_price|formatted_price }}</span>
-                        <span class="text-body me-1 fs-6 formatted-price text-decoration-line-through">
-                      {{ latest_product.price|formatted_price }}
-                  </span>
+                    <span class="formatted-price">
+                      {{ latest_product.discount_price|floatformat:0 }} تومان
+                    </span>
+                                        <span class="text-body me-1 fs-6 formatted-price text-decoration-line-through">
+                      {{ latest_product.price|floatformat:0 }} تومان
+                    </span>
                     </p>
                     {% else %}
                     <p class="card-text text-dark fs-4 formatted-price">
-                        {{ latest_product.price|formatted_price }}
+                        {{ latest_product.price|floatformat:0|intcomma }} تومان
                     </p>
                     {% endif %}
                 </div>
