--- a/core/templates/includes/similar-products.html
+++ b/core/templates/includes/similar-products.html
@@ -41,7 +41,7 @@
                     </h4>
                     {% if similar_prodcut.is_discounted %}
                     <p class="card-text text-dark fs-4">
-                        <span class="formatted-price">{{similar_prodcut.get_price}}</span>
+                        <span class="formatted-price">{{similar_prodcut.discount_price|floatformat:0}}</span>
                         <span
                             class="text-body me-1 fs-6 formatted-price text-decoration-line-through">{{similar_prodcut.price}}
                         </span>
@@ -53,19 +53,19 @@
 
                 <div class="card-footer pt-0">
                     <!-- Rating -->
-                    <a class="d-inline-flex align-items-center mb-3" href="#">
-                        <div class="d-flex gap-1 ms-2">
-                            {% for i in "12345" %}
-                            {% if i|add:0 <= similar_prodcut.avg_rate %} <span><i class="bi bi-star-fill star-rate"></i></span>
-                                {% else %}
-                                <span><i class="bi bi-star star-rate"></i></span>
-                                {% endif %}
+<!--                    <a class="d-inline-flex align-items-center mb-3" href="#">-->
+<!--                        <div class="d-flex gap-1 ms-2">-->
+<!--                            {% for i in "12345" %}-->
+<!--                            {% if i|add:0 <= similar_prodcut.avg_rate %} <span><i class="bi bi-star-fill star-rate"></i></span>-->
+<!--                                {% else %}-->
+<!--                                <span><i class="bi bi-star star-rate"></i></span>-->
+<!--                                {% endif %}-->
 
-                                {% endfor %}
-                        </div>
-                        <span class="ms-1">{{similar_prodcut.avg_rate}}/5</span>
+<!--                                {% endfor %}-->
+<!--                        </div>-->
+<!--                        <span class="ms-1">{{similar_prodcut.avg_rate}}/5</span>-->
 
-                    </a>
+<!--                    </a>-->
                     <!-- End Rating -->
 
                     <button type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill"
