--- a/core/templates/shop/product-detail.html
+++ b/core/templates/shop/product-detail.html
@@ -117,11 +117,11 @@
                 {% if object.is_discounted %}
                 <div class="d-flex align-items-center">
                     <h3 class="mb-0 formatted-price">
-                        {{ object.get_price|intcomma }} تومان
+                        {{ object.discount_price|floatformat:0 }} تومان
                     </h3>
                     <span class="me-2 formatted-price text-decoration-line-through">
-            {{ object.price|intcomma }} تومان
-        </span>
+            {{ object.price|floatformat:0 }} تومان
+            </span>
                 </div>
                 {% else %}
                 <div class="d-flex align-items-center">
@@ -138,7 +138,13 @@
                 <div class="js-quantity-counter row align-items-center">
                     <div class="col">
                         <span class="d-block small">تعداد را انتخاب کنید</span>
-                        <input class="js-result form-control form-control-quantity-counter" type="text" value="1">
+                        <input type="number"
+                         class="js-result form-control form-control-quantity-counter type="text" value="1"
+                         name="quantity"
+                         min="1"
+                         max="9"
+                         value="{{ item.quantity }}"
+                         onchange="updateQuantity({{ item.product.id }}, this.value)">
                     </div>
                     <!-- End Col -->
 
@@ -240,7 +246,7 @@
             <!-- End Accordion -->
 
             <div class="d-grid mb-4">
-                <button type="button" class="btn btn-primary btntransition">افزودن به سبد خرید</button>
+                <button type="button" class="btn btn-primary btntransition" onclick="addToWishlist(this,`{{object.id}}`)">افزودن به سبد خرید</button>
             </div>
 
             <!-- Media -->
@@ -585,4 +591,29 @@
         </div>
     </div>
 </div>
+<script>
+function updateQuantity(product_id,quantity){
+        $.ajax({
+            url: "{%  url 'cart:update-quantity' %}",
+            method: 'POST',
+            data: {
+                product_id: product_id,
+                quantity: quantity,
+                csrfmiddlewaretoken: '{{ csrf_token }}'
+
+            },
+            success: function (response) {
+                console.log(response);
+                window.location.reload();
+                // do something with the response data
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                console.log(errorThrown);
+                // handle the error case
+            }
+        });
+    }
+
+</script>
+
 {% endblock content %}
